--- a/inference/config_inference.json
+++ b/inference/config_inference.json
@@ -1,6 +1,6 @@
 {	
 	"unet_patch_side": 64,
- 	"unet_batch_size": 1,
+ 	"unet_batch_size": 8,
  	"unet_threshold": 0.3,
  	"overlapping": 0.5,
  	"new_spacing": [0.39, 0.39, 0.55],
@@ -9,7 +9,7 @@
 	"lambda_loss": 0.5,
  	"cv_folds": 5,
 	"anatomically_informed_sliding_window": "True",
-	"test_time_augmentation": "True",
+	"test_time_augmentation": "False",
 	"nb_parallel_jobs": 4,
 
  	"reduce_fp": "True",
@@ -18,16 +18,19 @@
  	"min_aneurysm_volume": 0.70,
  	"remove_dark_fp": "False",
     
- 	"bids_dir_inhouse": "/path/to/BIDS/dataset/downloadable/from/OpenNEURO/",
-	"all_test_sub_ses_inhouse": "/Aneurysm_Detection/extra_files/all_test_subs_inhouse.pkl",
- 	"training_outputs_path": "/path/to/dir/containing/Training_Outputs",
+ 	"bids_dir_inhouse": "/media/student/HDD 1/MDS22/dataset",
+	"all_test_sub_ses_inhouse": "/home/student/Documents/MDS22/fixed_pickles/all_test_subs_inhouse.pkl",
+ 	"training_outputs_path": "/home/student/Documents/MDS22/fixed_pickles/Train_Outputs_Aug_16_2021_chuv_weak_plus_voxelwise_pretrain_adam_github/",
+	"training_sub_ses": "/media/student/HDD 1/MDS22/training_sub_ses",
+	"demo_dir": "/media/student/HDD 1/MDS22/demo_sub_ses",
+
 
 	"only_pretrain_on_adam": "False",
 	"bids_dir_adam": "/path/to/ADAM/dataset/BIDS_format/available_upon_request/",
-	"training_outputs_path_adam": "/Aneurysm_Detection/extra_files/Train_Outputs_whole_adam_ds",
+	"training_outputs_path_adam": "../extra_files/Train_Outputs_whole_adam_ds",
 
-	"ground_truth_dir": "/downloadable/from/https://drive.google.com/drive/folders/17TZiP-ieYlicDk6Fm0hh_qAel4azWQhd?usp=sharing",
+	"ground_truth_dir": "/media/student/HDD 1/MDS22/Ground_Truth_CHUV_as_ADAM",
 	"id_output_dir": "unique_id_for_this_run",
-	"landmarks_physical_space_path": "/Aneurysm_Detection/extra_files/Landmarks_LPS_mm_Dec_05_2020.csv",
-	"inference_outputs_path": "/path/to/desired/output/folder"
+	"landmarks_physical_space_path": "../extra_files/Landmarks_LPS_mm_Dec_05_2020.csv",
+	"inference_outputs_path": "/media/student/HDD 1/MDS22/demo_keputusan"
 }
