--- a/install/environment_clean.yml
+++ b/install/environment_clean.yml
@@ -11,16 +11,10 @@ dependencies:
   - pandas=1.2
   - scipy=1.6
   - pip:
-    - numpy==1.20
-    - connected-components-3d==3.2
+    - numpy==1.23.5
+    - connected-components-3d==3.12.4
     - scikit-image==0.18
-    - opencv-python==4.5
-    - antspyx==0.2
-    - tensorboard=2.4
-    - tensorboard-plugin-wit=1.6
-    - tensorflow=2.4
-    - tensorflow-base=2.4
-    - tensorflow-estimator=2.4
-    - tensorflow-gpu=2.4
-    - matplotlib=3.2
-    - matplotlib-base=3.2
+    - opencv-python==4.9.0.80
+    - antspyx==0.4.2
+    - tensorflow==2.15
+    - matplotlib==3.2
