--- a/requirements_Feb_14_2023.txt
+++ b/requirements_Feb_14_2023.txt
@@ -1,7 +1,6 @@
 absl-py==0.12.0
 alembic==1.6.2
-antspyx==0.2.7
-apt-xapian-index==0.47
+antspyx==0.4.2
 art==5.2
 astunparse==1.6.3
 attrs==21.2.0
@@ -20,7 +19,6 @@ cmaes==0.8.2
 cmd2==1.5.0
 colorama==0.4.4
 colorlog==5.0.1
-command-not-found==0.3
 connected-components-3d==3.2.1
 contextvars==2.4
 cryptography==1.2.3
@@ -29,10 +27,10 @@ cymem==2.0.5
 dataclasses==0.8
 dateparser==1.0.0
 decorator==4.4.2
-defer==1.0.6
+defer==1.0.4
 dicom2nifti==2.3.0
 dill==0.3.3
-distro-info===0.14ubuntu0.2
+distro-info==1.0
 engineering-notation==0.6.0
 et-xmlfile==1.1.0
 flatbuffers==1.12
@@ -63,7 +61,7 @@ itk-registration==5.2.1.post1
 itk-segmentation==5.2.1.post1
 Jinja2==2.11.3
 joblib==1.0.1
-kazam==1.5.3
+kazam==1.5.7
 Keras-Preprocessing==1.1.2
 kiwisolver==1.3.1
 lime==0.2.0.1
@@ -83,8 +81,6 @@ nltk==3.6.1
 nnunet==1.7.0
 numpy==1.19.5
 oauthlib==3.1.0
-onboard==1.2.0
-oneconf==0.3.9
 opencv-python==4.5.2.52
 openpyxl==3.0.7
 opt-einsum==3.3.0
@@ -108,21 +104,19 @@ pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycm==3.1
 pycups==1.9.73
-pycurl==7.43.0
 pydantic==1.7.3
 pydicom==2.1.2
 pydot==1.4.2
 pyflakes==1.1.0
-PyGObject==3.20.0
+PyGObject==3.42.2
 PyJWT==1.3.0
 pyparsing==2.4.7
 pyperclip==1.8.2
 pysmbc==1.0.15.5
-python-apt==1.1.0b1+ubuntu0.16.4.12
 python-dateutil==2.8.1
-python-debian==0.1.27
+python-debian==0.1.49
 python-editor==1.0.4
-python-systemd==231
+python-systemd==0.0.9
 pytorch-ignite==0.4.7
 pytz==2021.1
 PyWavelets==1.1.1
@@ -136,20 +130,16 @@ rsa==4.7.2
 scikit-image==0.17.2
 scikit-learn==0.24.2
 scipy==1.5.4
-screen-resolution-extra==0.0.0
 seaborn==0.11.1
-sessioninstaller==0.0.0
 SimpleITK==2.0.2
 six==1.15.0
 smart-open==3.0.0
-software-center-aptd-plugins==0.0.0
 spacy==3.0.6
 spacy-legacy==3.0.4
 SQLAlchemy==1.4.15
 srsly==2.4.1
 statsmodels==0.12.2
 stevedore==3.3.0
-system-service==0.3
 tensorboard==2.5.0
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.0
@@ -169,9 +159,6 @@ traceback2==1.4.0
 typer==0.3.2
 typing-extensions==3.7.4.3
 tzlocal==2.1
-ubuntu-drivers-common==0.0.0
-ufw==0.35
-unattended-upgrades==0.1
 unittest2==1.1.0
 urllib3==1.26.4
 wasabi==0.8.2
@@ -179,6 +166,5 @@ wcwidth==0.2.5
 webcolors==1.11.1
 Werkzeug==2.0.0
 wrapt==1.12.1
-xkit==0.0.0
 xlrd==2.0.1
 zipp==3.4.1
