--- a/training/config_training.json
+++ b/training/config_training.json
@@ -1,16 +1,16 @@
 {	
 	"epochs": 80, 	
 	"lambda_loss": 0.5,
-	"batch_size": 8,
+	"batch_size": 4,
 	"lr": 0.0001,
 	"conv_filters": [9, 26, 61, 74],
 	"fold_to_do": 1,
-	"use_validation_data": "False",
+	"use_validation_data": "True",
 	"percentage_validation_subs": 0.2,
 	"n_parallel_jobs": 4,
 	
-	"data_path": "/path/to/dataset/of/patches",
+	"data_path": "/media/student/HDD 1/MDS22/training_dataset/Data_Set_Mar_05_2024_unique_identifier",
 	"input_ds_identifier": "training_bids_dataset",
-	"path_previous_weights_for_pretraining": "/Aneurysm_Detection/extra_files/Train_Outputs_whole_adam_ds/whole_dataset/saved_models",
-	"train_test_split_to_replicate": "/Aneurysm_Detection/extra_files/Forced_CV_for_reproducibility"
+	"path_previous_weights_for_pretraining": "../extra_files/Train_Outputs_whole_adam_ds/whole_dataset/saved_models",
+	"train_test_split_to_replicate": "/home/student/Documents/MDS22/fixed_pickles/Forced_CV_for_reproducibility"
 }
