Add update user detail and reset password features

--- a/streamlit_app/config.yaml
+++ b/streamlit_app/config.yaml
@@ -18,9 +18,10 @@ credentials:
       password: $2b$12$VtZrReGxPBUF8LGwmJA1deUp3xJLFSpsSzHtwU9gQEt6yMe8P6CnK
     kokonen:
       email: kokonen6969@gmail.com
+      failed_login_attempts: 0
       logged_in: false
       name: Kokonen
-      password: $2b$12$lrwHNFBjSP1YxlrgYVsNAeQMz2/z6OPcHGMrwRFl2gsGtPCPcUp4i
+      password: $2b$12$53TkNKhvvF5k5CqEQ6GPN.YVilN3BqCa5Bk2Q.zQdTgzOza0uhXCS
 pre-authorized:
   emails:
   - test001@gmail.com
