--- a/inference/config_inference.json
+++ b/inference/config_inference.json
@@ -19,18 +19,18 @@
  	"remove_dark_fp": "False",
     
  	"bids_dir_inhouse": "/media/student/HDD 1/MDS22/dataset",
-	"all_test_sub_ses_inhouse": "../fixed_pickles/all_test_subs_inhouse.pkl",
- 	"training_outputs_path": "../fixed_pickles/Train_Outputs_Aug_16_2021_chuv_weak_plus_voxelwise_pretrain_adam_github/",
-	"training_sub_ses": "../training_sub_ses",
+	"all_test_sub_ses_inhouse": "./fixed_pickles/all_test_subs_inhouse.pkl",
+ 	"training_outputs_path": "./fixed_pickles/Train_Outputs_Aug_16_2021_chuv_weak_plus_voxelwise_pretrain_adam_github/",
+	"training_sub_ses": "/media/student/HDD 1/MDS22/training_sub_ses",
 	"demo_dir": "/media/student/HDD 1/MDS22/demo_sub_ses",
 
 
 	"only_pretrain_on_adam": "False",
 	"bids_dir_adam": "/path/to/ADAM/dataset/BIDS_format/available_upon_request/",
-	"training_outputs_path_adam": "../extra_files/Train_Outputs_whole_adam_ds",
+	"training_outputs_path_adam": "./extra_files/Train_Outputs_whole_adam_ds",
 
-	"ground_truth_dir": "../Ground_Truth_CHUV_as_ADAM",
+	"ground_truth_dir": "./Ground_Truth_CHUV_as_ADAM",
 	"id_output_dir": "run",
-	"landmarks_physical_space_path": "../extra_files/Landmarks_LPS_mm_Dec_05_2020.csv",
+	"landmarks_physical_space_path": "./extra_files/Landmarks_LPS_mm_Dec_05_2020.csv",
 	"inference_outputs_path": "/media/student/HDD 1/MDS22/demo_keputusan"
 }
