--- a/inference/config_inference_streamlit.json
+++ b/inference/config_inference_streamlit.json
@@ -26,15 +26,15 @@
     "min_aneurysm_volume": 0.7,
     "remove_dark_fp": "False",
     "bids_dir_inhouse": "/media/student/HDD 1/MDS22/dataset",
-    "all_test_sub_ses_inhouse": "../fixed_pickles/all_test_subs_inhouse.pkl",
-    "training_outputs_path": "../fixed_pickles/Train_Outputs_Aug_16_2021_chuv_weak_plus_voxelwise_pretrain_adam_github/",
-    "training_sub_ses": "../training_sub_ses",
-    "demo_dir": "/home/student/Documents/MDS22/Aneurysm_Detection_dev/streamlit_app/upload/demo2",
+    "all_test_sub_ses_inhouse": "./fixed_pickles/all_test_subs_inhouse.pkl",
+    "training_outputs_path": "./fixed_pickles/Train_Outputs_Aug_16_2021_chuv_weak_plus_voxelwise_pretrain_adam_github/",
+    "training_sub_ses": "/media/student/HDD 1/MDS22/training_sub_ses",
+    "demo_dir": "./streamlit_app/upload/demo2",
     "only_pretrain_on_adam": "False",
     "bids_dir_adam": "/path/to/ADAM/dataset/BIDS_format/available_upon_request/",
-    "training_outputs_path_adam": "../extra_files/Train_Outputs_whole_adam_ds",
-    "ground_truth_dir": "../Ground_Truth_CHUV_as_ADAM",
+    "training_outputs_path_adam": "./extra_files/Train_Outputs_whole_adam_ds",
+    "ground_truth_dir": "./Ground_Truth_CHUV_as_ADAM",
     "id_output_dir": "run",
-    "landmarks_physical_space_path": "../extra_files/Landmarks_LPS_mm_Dec_05_2020.csv",
-    "inference_outputs_path": "/home/student/Documents/MDS22/Aneurysm_Detection_dev/streamlit_app/outputs"
+    "landmarks_physical_space_path": "./extra_files/Landmarks_LPS_mm_Dec_05_2020.csv",
+    "inference_outputs_path": "./streamlit_app/outputs"
 }
