--- a/streamlit_app/config.yaml
+++ b/streamlit_app/config.yaml
@@ -4,6 +4,11 @@ cookie:
   name: brain_aneurysm_cookie
 credentials:
   usernames:
+    admin:
+      email: admin@gmail.com
+      logged_in: false
+      name: admin
+      password: $2b$12$hxo8nkch8qnOwS7CFJ.thehrTz.RHS2n6h7Aq68e/lDUPjMIZuZSq
     admin1:
       email: admin1@gmail.com
       failed_login_attempts: 0
